--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -258,18 +258,23 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/uploadPhotosCard" />
 
-                <EditText
-                    android:id="@+id/location_ET"
+                <TextView
+                    android:id="@+id/locationEt"
                     android:layout_width="match_parent"
                     android:layout_height="42dp"
+                    android:singleLine="true"
+
                     android:layout_marginHorizontal="15dp"
                     android:layout_marginTop="7dp"
                     android:background="@drawable/bg_back_btn"
+                    android:clickable="true"
                     android:drawableLeft="@drawable/ic_location"
                     android:drawablePadding="20dp"
-                    android:hint="Location Of Event"
-                    android:inputType="textPostalAddress"
+                    android:gravity="center|start"
+                    android:ellipsize="end"
+                    android:maxLines="1"
                     android:paddingStart="20dp"
+                    android:text="Location Of Event"
                     android:textColor="@color/black"
                     android:textColorHint="#80282729"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -286,7 +291,7 @@
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/location_ET" />
+                    app:layout_constraintTop_toBottomOf="@+id/locationEt" />
 
                 <EditText
                     android:id="@+id/descriptionEt"
