--- a/app/src/main/res/layout/rv_payroll_layout.xml
+++ b/app/src/main/res/layout/rv_payroll_layout.xml
@@ -1,80 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/payslipCard"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp"
+    android:layout_marginHorizontal="5dp"
+    android:layout_marginVertical="2dp"
     android:background="@drawable/bg_back_btn">
 
-    <ImageView
-        android:id="@+id/imgUser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:src="@drawable/image_employee"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/payslipsName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="8dp"
         android:text="Robert Fox"
         android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/imgUser"
-        app:layout_constraintTop_toTopOf="@id/imgUser" />
+        app:layout_constraintBottom_toTopOf="@+id/payslipsDate"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/txtStartDate"
+        android:id="@+id/payslipsDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginVertical="10dp"
         android:text="10 jan 2022"
         android:textColor="@color/txtGray"
         android:textSize="12sp"
         android:textStyle="normal"
-        app:layout_constraintStart_toStartOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/payslipsName"
+        app:layout_constraintTop_toBottomOf="@+id/payslipsName" />
 
-
-    <TextView
-        android:id="@+id/txtEndDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:text="10 Feb 2022"
-        android:textColor="@color/txtGray"
-        android:textSize="12sp"
-        android:textStyle="normal"
-        app:layout_constraintBottom_toBottomOf="@+id/txtStartDate"
-        app:layout_constraintStart_toEndOf="@+id/txtStartDate"
-        app:layout_constraintTop_toTopOf="@+id/txtStartDate" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="monthly salary"
+        android:layout_marginEnd="5dp"
+        android:text="salary -"
         android:textColor="@color/mainColor"
         android:textSize="12sp"
         android:textStyle="normal"
-        app:layout_constraintBottom_toBottomOf="@+id/imgUser"
-        app:layout_constraintStart_toStartOf="@+id/txtStartDate"
-        app:layout_constraintTop_toBottomOf="@+id/txtStartDate" />
+        app:layout_constraintBottom_toBottomOf="@+id/payslipsAmount"
+        app:layout_constraintEnd_toStartOf="@+id/payslipsAmount"
+        app:layout_constraintTop_toTopOf="@+id/payslipsAmount" />
 
     <TextView
+        android:id="@+id/payslipsAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:text="$500.2"
         android:textColor="@color/mainColor"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView7"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView7" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
