--- a/app/src/main/res/layout/rv_event_layout.xml
+++ b/app/src/main/res/layout/rv_event_layout.xml
@@ -56,13 +56,17 @@
 
             <TextView
                 android:id="@+id/textView5"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="8dp"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:layout_marginEnd="10dp"
                 android:text="In Office"
                 android:textColor="@color/txtGray"
                 android:textSize="10sp"
                 android:textStyle="normal"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtEventName" />
 
